# cmakedemo

./: .gitignore  README.md
cmake1/: auto_build.bat
cmake2/: CMakeLists.txt  cmake2.cpp
cmake2/msqrt/: CMakeLists.txt
cmake3/: CMakeLists.txt  Readme.txt  cmake3.cpp
cmake4/: CMakeLists.txt  Readme.md  Readme.txt
cmake4/cmake/modules/: FindOpenVR.cmake
cmake5/: CMakeLists.txt
cmake6/: CMakeLists.txt  Readme.md
cmake7/: CMakeLists.txt  main.cpp
cmake8/cmake1/: CMakeLists.txt
cmake8/cmake1go/: auto_build_linux.sh  main.go
cmakea/: CMakeLists.txt
cmakeb/: CMakeLists.txt  cmakeb.cpp
cmakeb/msqrt/: msqrt.cpp  msqrt.h
cmakeb/msquare/: CMakeLists.txt  msquare.cpp  msquare.h
cmakec/: CMakeLists.txt
cmakec/msqrt/: CMakeLists.txt
cmakec/msquare/: CMakeLists.txt
cmaked/: Readme.txt
cmaked/VTKDemo/: CMakeLists.txt  Cube.cxx
cmdgrid/: CMakeLists.txt  cmdgrid.cpp
pocoexample/: .gitignore
pocoexample/example/: .clang-format  CMakeLists.txt  auto_build_release.bat  auto_format_code.bat  example.cpp
pocoexample/poco/: README.md  auto_build.bat  auto_build_debug.bat  auto_build_release.bat
